--- a/personal/esphome/experiment.yaml
+++ b/personal/esphome/experiment.yaml
@@ -4,17 +4,17 @@ esphome:
   board: d1_mini # optional, only affects pin layout
 
 wifi:
-  ssid: "<redacted>"
-  password: "<redacted>"
+  ssid: !secret wifi_ssid
+  password: !secret wifi_password
   manual_ip:
-    static_ip: 192.168.1.248
-    gateway: 192.168.1.1
-    subnet: 255.255.255.0
+    static_ip: !secret wifi_static_ip
+    gateway: !secret wifi_gateway
+    subnet: !secret wifi_subnet
 
   # Enable fallback hotspot (captive portal) in case wifi connection fails
   ap:
-    ssid: "Experiment Fallback Hotspot"
-    password: "<redacted>"
+    ssid: !secret wifi_fallback_ap_ssid
+    password: !secret wifi_fallback_ap_password
 
 switch:
   - platform: gpio
@@ -41,7 +41,7 @@ logger:
 
 # Enable Home Assistant API
 api:
-  password: "foobar"
+  password: !secret api_password
 
 ota:
-  password: "foobar"
+  password: !secret ota_password
