--- a/experiments/shelly1/shelly1.yaml
+++ b/experiments/shelly1/shelly1.yaml
@@ -29,6 +29,7 @@ switch:
     pin: GPIO4
     id: shelly_1_relay
 
+# This sensor will be 'on' when supplying power to the SW pin
 binary_sensor:
   - platform: gpio
     pin:
