--- a/experiments/nodemcu-esp32/nodemcu.yaml
+++ b/experiments/nodemcu-esp32/nodemcu.yaml
@@ -8,6 +8,22 @@ esphome:
     board_build.mcu: esp32
     board_build.f_cpu: 240000000L
 
+wifi:
+  ssid: !secret wifi_ssid
+  password: !secret wifi_password
+  manual_ip:
+    static_ip: !secret wifi_static_ip
+    gateway: !secret wifi_gateway
+    subnet: !secret wifi_subnet
+
+# Enable Home Assistant API
+api:
+  password: !secret api_password
+
+# Enable OTA updates
+ota:
+  password: !secret ota_password
+
 logger:
 
 i2c:
@@ -16,11 +32,30 @@ i2c:
   # scan: True
   # id: bus_a
 
-binary_sensor:
+switch:
   - platform: gpio
-    name: "Pin GPIO23"
-    pin: GPIO23
+    name: "relay 1"
+    pin:
+      number: 25
+      inverted: True
 
+  - platform: gpio
+    name: "relay 2"
+    pin:
+      number: 26
+      inverted: True
+
+  - platform: gpio
+    name: "relay 3"
+    pin:
+      number: 32
+      inverted: True
+
+  - platform: gpio
+    name: "relay 4"
+    pin:
+      number: 33
+      inverted: True
 
 sensor:
   - platform: bme280
